<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_conlogo"
        android:background="@drawable/d4hlogo"
       android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Us"
        android:layout_centerHorizontal="true"
        android:id="@+id/contactus"
        android:textColor="@color/colorGray"
        android:layout_below="@id/iv_conlogo"
        android:textSize="20sp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactus"
        android:layout_margin="10dp"
        android:id="@+id/cdv">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/tb"
        android:layout_margin="10dp">
        <TableRow
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_add"
                android:layout_marginLeft="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtview_map"
                android:text="@string/address"
                android:textColor="@color/colorGray"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            ><ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorGray"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_mobile"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtview_mobile"
                android:textColor="@color/colorGray"
                android:text="@string/mobile"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_phone"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtview_phone"
                android:textColor="@color/colorGray"
                android:text="@string/phone"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_email"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtview_email"
                android:text="@string/email"
                android:textColor="@color/colorGray"
                android:layout_marginLeft="5dp"/>
        </TableRow>
    </TableLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>