<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorOffwhite"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diabetic Diet Pro"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bdiabetic"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            style="@style/CardViewStyle"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="What You Will Get"
                android:textSize="20sp"
                android:fontFamily="@font/fallingsky"
                android:layout_marginLeft="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginRight="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/icondietplan"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/iconweightlogtracker"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:text="@string/health" />
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/iconweeklymonitor">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dietcoun"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/iconphone"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/iconrecipe"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/iconmb"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:text="@string/dash" />
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/iconchatsupp">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/iconeating"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dietreview"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorGray"
                        android:layout_gravity="center"
                        android:textSize="12dp" />
                    />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>

                <!--<ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/iconweightlogtracker"
                    />-->



               <!-- <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:text="@string/nine" />-->



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                style="@style/CardViewStyle">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ll3"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15 days"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Manage Diabetic By Natural Way"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/ll"
                            android:layout_marginTop="10dp"
                            android:id="@+id/v3"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@color/colorGray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rs5"
                            android:textColor="@color/colorPrimary"
                            android:layout_below="@+id/ll"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:id="@+id/tv_subrate3"
                            android:textSize="30sp"
                            android:textStyle="bold"/>
                        <!--<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Additional Feature"
                            android:textColor="@color/colorGray"
                            android:layout_marginTop="10dp"
                            android:id="@+id/tv_additionalfeature3"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Specifice Dietory Guidline"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Maintainace Tips"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp"
                            />-->
                        <Button
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:text="Buy Now"
                            android:layout_margin="10dp"
                            android:id="@+id/btn_first_diabetic_plan"
                            android:textColor="@color/colorGray"
                            android:textStyle="bold"
                            android:layout_below="@+id/tv_subrate"
                            android:background="@drawable/planbutton"
                            android:layout_centerHorizontal="true"
                            android:textSize="10dp"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>